src/objects/ProgressNote_ActionPlanChildren_mjo__c.object
<CustomObject>
    <description>Action Plan</description>
    <fields>
        <fullName>Goal__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Goal</label>
        <referenceTo>Action_Plan_Goal__c</referenceTo>
        <relationshipLabel>ProgressNote_ActionPlanChildren_mjos</relationshipLabel>
        <relationshipName>goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note_End_Date__c</fullName>
        <formula>Progress_Note__r.End_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Note End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Note_Start_Date__c</fullName>
        <formula>Progress_Note__r.Start_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Note Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Objective</label>
        <referenceTo>Action_Plan_Objective__c</referenceTo>
        <relationshipLabel>ProgressNote_ActionPlanChildren_mjos</relationshipLabel>
        <relationshipName>objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Progress_Note__c</fullName>
        <label>Progress Note</label>
        <referenceTo>Progress_Note__c</referenceTo>
        <relationshipLabel>ProgressNote_ActionPlanChildren_mjos</relationshipLabel>
        <relationshipName>ProgressNote_ActionPlanChildren_mjos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>ProgressNote_ActionPlanChildren_mjo</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Progress_Note__c</columns>
        <columns>Goal__c</columns>
        <columns>Objective__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProgressNote_ActionPlanChildren_mjos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>